--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,7 @@ body {
   --bg-red: #ff3841;
   --text-blue: #1f3d6d;
   --bg-btn-blue: #229ed9;
+  --btn-blue: #229ed9;
 }
 
 /* COLORS */
@@ -148,6 +149,10 @@ body {
 }
 .bg-btn-blue {
   background-color: #229ed9;
+}
+
+.btn-blue {
+  color: var(--btn-blue);
 }
 
 /* HEADING TAGS */
@@ -529,6 +534,12 @@ h4 {
 .pt-88px {
   padding-top: 88px;
 }
+.pt-0 {
+  padding-top: 0;
+}
+.pb-0 {
+  padding-bottom: 0;
+}
 
 /* BORDER-RADIUSES */
 .rounded {
@@ -753,6 +764,10 @@ li {
   mix-blend-mode: screen !important;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .black-screen {
   position: fixed;
   top: 0;
@@ -801,6 +816,12 @@ li {
   text-indent: 50%;
 }
 
+/* GRID CLASSES */
+
+.grid-col-span-2 {
+  grid-column: span 2;
+}
+
 /*  */
 /*  */
 /*  */
@@ -811,4 +832,21 @@ li {
   padding: 1rem 26px;
   background-color: var(--bg-red);
   border-radius: 10px;
+}
+
+.white-glass {
+  position: relative;
+  z-index: 10;
+}
+
+.white-glass::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(10px);
 }
