--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
+
 @font-face {
   font-family: "HelveticaNeue-Thin";
   src: url(./assets/fonts/helveticaneue/HelveticaNeue-Thin.ttf);
@@ -120,6 +126,7 @@ body {
   --bg-blue: #70cbf4;
   --bg-red: #ff3841;
   --text-blue: #1f3d6d;
+  --text-blue-light: #006ea3;
   --bg-btn-blue: #229ed9;
   --btn-blue: #229ed9;
 }
@@ -146,6 +153,9 @@ body {
 
 .text-blue {
   color: var(--text-blue);
+}
+.text-blue-light {
+  color: var(--text-blue-light);
 }
 .bg-btn-blue {
   background-color: #229ed9;
