--- a/src/layouts/Footer/Footer.module.css
+++ b/src/layouts/Footer/Footer.module.css
@@ -30,3 +30,49 @@
   border-bottom: 2px solid #1f3d6d2d;
   padding: 36px 0;
 }
+
+.footerBottom {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.footerBottom > .box {
+  /* border: 2px solid red; */
+}
+
+/* .footerBottom > .box:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+.footerBottom > .box.form {
+  display: flex;
+  align-items: center;
+}
+.footerBottom > .box.form > :not(:last-child) {
+  margin-right: 20px;
+}
+
+.footerBottom > .box.form p {
+  flex: 1;
+}
+
+.footerBottom > .box.form input {
+  flex: 1;
+  width: 100%;
+  display: block;
+  border: 1px solid #ffffff;
+  padding: 18px 28px;
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.062);
+}
+
+.footerBottom > .box.form input::placeholder {
+  color: rgba(255, 255, 255, 0.692);
+}
+
+.footer_Footer {
+  background-color: #0a7cb3;
+  padding: 32px 0;
+}
