--- a/src/components/Cards/RoomCard/RoomCard.module.css
+++ b/src/components/Cards/RoomCard/RoomCard.module.css
@@ -3,3 +3,68 @@
   background-color: white;
   border: 1px solid #cccccc;
 }
+
+.card.isOnTop {
+  border: 4px solid #70cbf4;
+}
+
+.tickWrapper {
+  position: absolute;
+  top: -2px;
+  right: -2px;
+  width: 161.32px;
+  height: 156.73px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  padding-top: 1.9rem;
+  padding-right: 1.5rem;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 50%);
+}
+
+.tickWrapper img {
+  width: 45px;
+}
+
+.card > main {
+  display: flex;
+}
+
+.left {
+  width: 500px;
+  display: flex;
+  margin-right: 34px;
+}
+
+.left img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.right {
+  flex: 1;
+}
+
+.listCont {
+  flex: 1;
+  display: flex;
+}
+
+.listCont > :not(:last-child) {
+  margin-right: 50px;
+}
+
+/* priceWrapper */
+.priceWrapper {
+  border: 1px solid #70cbf4;
+  background-color: #e2f3fe;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 1.5rem;
+}
+
+.priceWrapper > button {
+  padding: 20px 25px;
+}
