--- a/src/components/InputField/InputField.module.css
+++ b/src/components/InputField/InputField.module.css
@@ -9,3 +9,9 @@
   background-color: white;
   border: 1px solid #b8d1e2;
 }
+
+@media (max-width: 1000px) {
+  .input {
+    padding: 12px 14px;
+  }
+}
