--- a/src/layouts/Footer/Footer.module.css
+++ b/src/layouts/Footer/Footer.module.css
@@ -76,3 +76,76 @@
   background-color: #0a7cb3;
   padding: 32px 0;
 }
+
+@media (max-width: 1000px) {
+  .footerBottom {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem 1rem;
+  }
+  .form {
+    flex-direction: column;
+    text-align: left;
+    align-items: unset;
+    grid-column: 1/-1;
+    max-width: 300px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .footerBottom > .box.form > :not(:last-child) {
+    margin-bottom: 10px;
+    width: 100%;
+    padding-left: 0rem;
+    margin-right: 0;
+  }
+
+  .form input {
+    text-align: center;
+  }
+
+  .footerBottom > :nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .links_wrpaper {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: -1rem !important;
+    margin-top: 0 !important;
+    padding: 16px 0;
+  }
+
+  .links_wrpaper > a {
+    margin: 1rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .footer_top {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer_top > :not(:last-child) {
+    margin-bottom: 2rem;
+  }
+
+  .icons_wrapper > p {
+    display: none;
+  }
+
+  .footerLogo {
+    width: 200px;
+  }
+}
+
+@media (max-width: 500px) {
+  .footerBottom {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+}
