--- a/src/layouts/HomePage/Grid/Grid.module.css
+++ b/src/layouts/HomePage/Grid/Grid.module.css
@@ -4,55 +4,6 @@
   gap: 1rem;
 }
 
-.gridItem {
-  aspect-ratio: 1/1 !important;
-  padding: 50px;
-  display: flex;
-  align-items: flex-end;
-  position: relative;
-  z-index: 4;
-  overflow: hidden;
-}
-
-.gridItem::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: transparent linear-gradient(180deg, #00000000 0%, #0000009a 100%)
-    0% 0% no-repeat padding-box;
-}
-
-.gridItemImg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  z-index: -2;
-  transition: all 0.4s ease;
-}
-
-.gridItem:hover .gridItemImg {
-  transform: scale(1.1);
-}
-
-.gridItem.spanning {
-  aspect-ratio: unset !important;
-}
-
-.pill {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-}
-
 /* .pill.isOffer .pillBg {
   background-color: orange !important;
   filter: none;
@@ -60,3 +11,9 @@
   backdrop-filter: none;
   -webkit-backdrop-filter: none;
 } */
+
+@media (max-width: 650px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
