--- a/src/layouts/HomePage/WeekOffers/WeekOffers.module.css
+++ b/src/layouts/HomePage/WeekOffers/WeekOffers.module.css
@@ -47,3 +47,27 @@
   grid-template-columns: repeat(2, 1fr);
   row-gap: 5px;
 }
+
+@media (max-width: 760px) {
+  .section {
+    padding: 30px 20px;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .left {
+    flex: 1;
+    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .offers_container {
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 0px;
+  }
+}
