--- a/src/components/InputBox/InputBox.module.css
+++ b/src/components/InputBox/InputBox.module.css
@@ -8,3 +8,12 @@
   padding: 22px 26px;
   width: 100%;
 }
+
+@media (max-width: 1000px) {
+  .inputBox input {
+    padding: 14px 20px;
+  }
+  .inputBox label {
+    padding-left: 1.8vw;
+  }
+}
