--- a/src/layouts/AboutHotelPage/Data/components/Details/Details.module.css
+++ b/src/layouts/AboutHotelPage/Data/components/Details/Details.module.css
@@ -13,7 +13,7 @@
 
 .headerRight > img {
   width: 100%;
-  height: 100%;
+  height: auto;
   aspect-ratio: 16/9;
   object-fit: cover;
 }
@@ -21,6 +21,7 @@
 .details main {
   border-top: 2px solid #dddddd;
   padding-top: 2rem;
+  display: flex;
 }
 
 .tabButton {
@@ -39,10 +40,6 @@
   width: 50px;
   display: flex;
   justify-content: center;
-}
-
-.details main {
-  display: flex;
 }
 
 .tabsWrapper {
@@ -71,4 +68,56 @@
 }
 .tabButton_active svg {
   fill: var(--btn-blue) !important;
+}
+
+@media (max-width: 1000px) {
+  .tabsWrapper {
+    min-width: 300px;
+  }
+
+  .tabButton {
+    padding: 20px 10px;
+  }
+
+  .tabButton svg {
+    fill: var(--text-blue) !important;
+    width: 26px !important;
+    height: 26px !important;
+  }
+
+  .tabButton > :not(:last-child) {
+    margin-right: 1rem;
+  }
+
+  .tabButtonIcon {
+    width: 30px;
+  }
+}
+
+@media (max-width: 760px) {
+  .details main {
+    flex-direction: column;
+  }
+
+  .tabsWrapper {
+    min-width: 100%;
+    margin-bottom: 2rem;
+    margin-right: 0;
+  }
+
+  .tabButton {
+    padding: 16px 10px;
+  }
+
+  .details header {
+    display: flex;
+    position: relative;
+    flex-direction: column-reverse;
+  }
+
+  .headerLeft {
+    flex: 1;
+    margin-right: 0px;
+    margin-top: 1.5rem;
+  }
 }
