--- a/src/index.css
+++ b/src/index.css
@@ -124,6 +124,7 @@ body {
   --fs-144px: 144px;
 
   --bg-blue: #70cbf4;
+  --color-blue: #70cbf4;
   --bg-blue-light: #e2f3fe;
   --bg-red: #ff3841;
   --text-blue: #1f3d6d;
@@ -175,6 +176,10 @@ body {
 }
 .bg-gray-light {
   background-color: var(--bg-gray-light);
+}
+
+.color-blue {
+  color: var(--color-blue);
 }
 
 /* HEADING TAGS */
@@ -631,8 +636,8 @@ h4 {
 /*  */
 
 .container-wrapper {
-  max-width: 1500px;
-  width: 90%;
+  max-width: 1400px;
+  width: 80%;
   margin: 0 auto;
 }
 .container-wrapper-2 {
@@ -879,6 +884,22 @@ li {
 
 /* MEDIA QUEIRES */
 
+@media (max-width: 1500px) {
+  :root {
+    --fs-60px: 54px;
+    --fs-32px: 26px;
+    --fs-24px: 20px;
+    --fs-58px: 50px;
+    --fs-28px: 22px;
+    --fs-26px: 22px;
+    --fs-22px: 18px;
+    --fs-20px: 18px;
+    --fs-18px: 16px;
+    --fs-52px: 40px;
+    --fs-50px: 38px;
+    --fs-34px: 28px;
+  }
+}
 @media (max-width: 1200px) {
   :root {
     --fs-60px: 50px;
