change container width in responsive to 90%

--- a/src/index.css
+++ b/src/index.css
@@ -926,7 +926,12 @@ li {
   .mb-50px {
     margin-bottom: 30px;
   }
+
+  .container-wrapper {
+    width: 90%;
+  }
 }
+
 @media (max-width: 600px) {
   :root {
     --fs-60px: 30px;
